# handlers/handler.go
@@ -40,6 +40,25 @@ func NewRecipesHandler(
 // Create a new recipe
 //
 // ---
+// parameters:
+// - name: recipe
+//   in: body
+//   description: The recipe to create
+//   schema:
+//     type: object
+//     properties:
+//       name:
+//         type: string
+//       tags:
+//         type: string
+//       ingredients:
+//         type: string
+//       instructions:
+//         type: string
+//
+// consumes:
+// - application/json
+//
 // produces:
 // - application/json
 //
@@ -48,6 +67,8 @@ func NewRecipesHandler(
 //     description: Successful operation
 //   '400':
 //     description: Invalid input
+//   '500':
+//     description: Internal Server Error
 func (handler *RecipesHandler) NewRecipeHandler(c *gin.Context) {
 	var recipe models.Recipe
 
@@ -88,6 +109,8 @@ func (handler *RecipesHandler) NewRecipeHandler(c *gin.Context) {
 // responses:
 //   '200':
 //     description: Successful operation
+//   '500':
+//     description: Internal Server Error
 func (handler *RecipesHandler) ListRecipesHandler(c *gin.Context) {
 	val, err := handler.redisClient.Get("recipes").Result()
 
@@ -152,6 +175,8 @@ func (handler *RecipesHandler) ListRecipesHandler(c *gin.Context) {
 // responses:
 //   '200':
 //     description: Successful operation
+//   '500':
+//     description: Internal Server Error
 func (handler *RecipesHandler) SearchRecipesHandler(c *gin.Context) {
 	tag := c.Query("tag")
 	cur, err := handler.collection.Find(handler.ctx, bson.M{"tags": tag})
@@ -187,6 +212,23 @@ func (handler *RecipesHandler) SearchRecipesHandler(c *gin.Context) {
 //   description: ID of the recipe
 //   required: true
 //   type: string
+// - name: recipe
+//   in: body
+//   description: The recipe to update
+//   schema:
+//     type: object
+//     properties:
+//       name:
+//         type: string
+//       tags:
+//         type: string
+//       ingredients:
+//         type: string
+//       instructions:
+//         type: string
+//
+// consumes:
+// - application/json
 //
 // produces:
 // - application/json
@@ -197,7 +239,9 @@ func (handler *RecipesHandler) SearchRecipesHandler(c *gin.Context) {
 //   '400':
 //     description: Invalid input
 //   '404':
-//     description: Invalid recipe ID
+//     description: Not found
+//   '500':
+//     description: Internal Server Error
 func (handler *RecipesHandler) UpdateRecipesHandler(c *gin.Context) {
 	id := c.Param("id")
 
@@ -263,7 +307,9 @@ func (handler *RecipesHandler) UpdateRecipesHandler(c *gin.Context) {
 //   '200':
 //     description: Successful operation
 //   '404':
-//     description: Invalid recipe ID
+//     description: Not found
+//   '500':
+//     description: Internal Server Error
 func (handler *RecipesHandler) DeleteRecipesHandler(c *gin.Context) {
 	id := c.Param("id")
 	objectId, _ := primitive.ObjectIDFromHex(id)
