# swagger.json
@@ -34,11 +34,17 @@
         "responses": {
           "200": {
             "description": "Successful operation"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
         "description": "Create a new recipe",
+        "consumes": [
+          "application/json"
+        ],
         "produces": [
           "application/json"
         ],
@@ -46,12 +52,39 @@
           "recipes"
         ],
         "operationId": "createRecipe",
+        "parameters": [
+          {
+            "description": "The recipe to create",
+            "name": "recipe",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ingredients": {
+                  "type": "string"
+                },
+                "instructions": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "tags": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful operation"
           },
           "400": {
             "description": "Invalid input"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -77,6 +110,9 @@
         "responses": {
           "200": {
             "description": "Successful operation"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -84,6 +120,9 @@
     "/recipes/{id}": {
       "put": {
         "description": "Update an existing recipe",
+        "consumes": [
+          "application/json"
+        ],
         "produces": [
           "application/json"
         ],
@@ -98,6 +137,28 @@
             "name": "id",
             "in": "path",
             "required": true
+          },
+          {
+            "description": "The recipe to update",
+            "name": "recipe",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ingredients": {
+                  "type": "string"
+                },
+                "instructions": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "tags": {
+                  "type": "string"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -108,7 +169,10 @@
             "description": "Invalid input"
           },
           "404": {
-            "description": "Invalid recipe ID"
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -135,7 +199,10 @@
             "description": "Successful operation"
           },
           "404": {
-            "description": "Invalid recipe ID"
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
